--- a/templates/dashboard/general_director.html
+++ b/templates/dashboard/general_director.html
@@ -1,53 +1,45 @@
+<!-- templates/dashboard/general_director.html -->
 {% extends "dashboard/base_dashboard.html" %}
-{% set role_color = '#2c6e49' %}
 
-{% block title %}General Director Dashboard{% endblock %}
-{% block dashboard_title %}General Director Dashboard{% endblock %}
-
-{% block dashboard_content %}
-<div class="row mb-4">
-    <div class="col-md-3">
-        <div class="card text-white bg-primary">
-            <div class="card-body">
-                <h5 class="card-title">Total Employees</h5>
-                <p class="card-text display-4">{{ employee_count }}</p>
+{% block content %}
+<div class="container mt-5">
+    <div class="alert alert-primary">
+        <h2>General Director Dashboard</h2>
+        <p>Welcome, {{ current_user.name }}</p>
+    </div>
+    
+    <div class="card mt-4">
+        <div class="card-body">
+            <h3>Executive Overview</h3>
+            <div class="mt-3">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5>Financial Summary</h5>
+                                <p>Revenue: $X,XXX,XXX</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5>Employee Metrics</h5>
+                                <p>XX Employees | XX% Growth</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card mb-3">
+                            <div class="card-body">
+                                <h5>Performance</h5>
+                                <p>Q3 Goals: XX% Complete</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-3">
-        <div class="card text-white bg-success">
-            <div class="card-body">
-                <h5 class="card-title">Departments</h5>
-                <p class="card-text display-4">{{ department_count }}</p>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="card mb-4">
-    <div class="card-header">
-        <h5>Recent Employees</h5>
-    </div>
-    <div class="card-body">
-        {% include 'dashboard/partials/employee_summary.html' %}
-    </div>
-</div>
-
-<div class="card mb-4">
-    <div class="card-header">
-        <h5>Department Overview</h5>
-    </div>
-    <div class="card-body">
-        {% include 'dashboard/partials/department_summary.html' %}
-    </div>
-</div>
-
-<div class="card">
-    <div class="card-header">
-        <h5>Recent Activities</h5>
-    </div>
-    <div class="card-body">
-        {% include 'dashboard/partials/recent_activities.html' %}
     </div>
 </div>
 {% endblock %}
