--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -10,7 +10,7 @@
             <div class="col-md-6">
                 <div class="card">
                     <div class="card-header bg-primary text-white">
-                        <h4 class="text-center">HRcopilot Login</h4>
+                        <h4 class="text-center">ALGHAITH HR System</h4>
                     </div>
                     <div class="card-body">
                         <form method="POST">
